infrastructure/ingress/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dev-ecommerce-ingress

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - host: api.dev.emmanuelogah.com

      http:
        paths:

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8083

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8084

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8082
